ServerConnectionTask should be working now, have yet to test due to eduroam issues.